[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.45"
chrono = "0.4.19"


[dependencies.sqlx]
version="0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline"
]
